tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__HigherPrecision-AAAAAAAAAAAAAAAAAAAKcA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2672,
  "prerequisites": [
    3090
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can upgrade the precise casings to unlock more recipes in precise mode and gain more parallels in normal mode.\n\n[note]To make orundum check out the recipe for the orundum plate.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lHigher Precision",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3090
  ],
  "rewards": [],
  "tasks": []
}
