tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__HundredsofThousa-Y1kiJC_kRGKkW7h3qOPI8A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3450958405003626736,
  "prerequisites": [
    13039129001980477985
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Linear Accelerator (LINAC) can be used to boost the energy of your beam, provided the beam's particles are charged. You'll need to constantly provide it with coolant for it to run, otherwise you'll have maintenance issues every time it runs dry.\n\nOutput energy can be increased by increasing EU/t (scales with the cbrt) or increasing length (scales linearly). The latter also decreases focus, however.\n\nFocus in turn can be improved by using a better/lower temperature coolant (options listed on tooltip).\n\nNote that Amount remains unchanged.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Hundreds of Thousands of eV",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13039129001980477985
  ],
  "rewards": [],
  "tasks": []
}
