tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__LiquidFuelledFir-AAAAAAAAAAAAAAAAAAACMQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 561,
  "prerequisites": [
    65
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Creosote oil into steam! After you make your first steel you are able to craft a liquid fueled firebox.\n\nDiesel, ethanol, creosote and Biodiesel all work well here. This will also require a boiler tank - see the quests linked below.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lLiquid-Fuelled Firebox",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65
  ],
  "rewards": [],
  "tasks": []
}
